--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
     <script type="text/javascript" src="js/profile/profile-srv.js"></script>
     <script type="text/javascript" src="js/profile/profile-ctlr.js"></script>
     <script type="text/javascript" src="js/directives/level-bar.js"></script>
+    <style>
+        @page {
+            size: 297mm 419mm;
+        }
+
+        .page {
+            page-break-after: always;
+        }
+    </style>
 </head>
 
 <body>
